# microsoft-teams-automatization

./: .gitignore  Cargo.toml  DOCUMENTATION.md  build.rs
config/: description.txt
src/: main.rs
src/modules/: config.rs  encryption.rs
src/modules/app/: calendar.rs  dependencies.rs  login.rs
